metadata-retriever/metadata/objects/Test_Result__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test results that based on Test Case.</description>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <label>Actual Result</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fail_Steps__c</fullName>
        <label>Fail Steps</label>
        <summaryFilterItems>
            <field>Test_Step_Result__c.Status__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Step_Result__c.Test_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Passed_Steps__c</fullName>
        <label>Passed Steps</label>
        <summaryFilterItems>
            <field>Test_Step_Result__c.Status__c</field>
            <operation>equals</operation>
            <value>Passed</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Step_Result__c.Test_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <formula>HYPERLINK(Test_Case__r.Requirement__r.Id, Test_Case__r.Requirement__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Run__c</fullName>
        <label>Test Run</label>
        <referenceTo>Test_Run__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Result</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Test Result</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>true</active>
        <label>Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>UAT</fullName>
        <active>true</active>
        <label>UAT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>